# sensei

./: .gitignore  CONTEXT.md  pyproject.toml
.claude/: launch.json
config/: com.sensei.dashboard.plist  com.sensei.executeopen.plist  com.sensei.governed-scheduler.plist  com.sensei.runday.plist  com.sensei.shadow-monitor.plist  execution.yaml  risk.yaml  scheduler.json
data/: earnings_cache.json  mistake_ledger.jsonl  operations.sqlite3  pending_orders.json  principles.jsonl  studied_rules.json  universe.csv
docs/: news-risk.md  trade-admission.md
tests/: test_accelerated_paper_gate.py  test_account_snapshot_authority.py  test_agent_evaluation.py  test_automation_evidence.py  test_automation_runner.py  test_automation_scheduling.py  test_backtest.py  test_broker_snapshot_authority.py  test_chain.py  test_committee_verdict_authority.py  test_data_store.py  test_decision_memory.py  test_decision_trace_authority.py  test_derived_memory.py  test_desk_reporting.py  test_desk_roles.py  test_desk_runtime.py  test_entry_rehearsal.py  test_events.py  test_experiment_registry.py  test_fact_authority.py  test_governed_desk_supervisor.py  test_governed_entry.py  test_governed_entry_end_to_end.py  test_governed_migration.py  test_governed_paper_coordinator.py  test_intent_factory.py  test_intraday_replay.py  test_intraday_session.py  test_kernel_admission_authority.py  test_legacy_migration.py  test_legacy_position_reconciliation.py  test_legacy_risk_containment.py  test_locked_confirmation.py  test_loop.py  test_market_data_catalog.py  test_memory_quality.py  test_news_risk.py  (+40 more)
(+179 files in other folders)
