[project]
name = "sensei"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sivasai", email = "sivasai@chainbrain.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "yfinance>=1.5.1",
]

[project.scripts]
sensei = "sensei.cli:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
